--- a/index.html
+++ b/index.html
@@ -12,69 +12,69 @@
         <header class="header">
           <a href="https://practicum.yandex.ru/" class="header__link" target="_blank"><img alt="Здесь должен быть логотип Яндекс Практикума, но что-то пошло не так.." src="./images/logo/logo.svg" class="logo logo_place_header"></a>
           <h1 class="header__title">Научиться учиться</h1>   
-          <img alt="Картина Фёдора Решетникова - Опять двойка" src="./images/two_again.png" class="header__main-illustrator">
+          <img alt="Картина Фёдора Решетникова - Опять двойка" src="./images/two_again.png" class="header__main-illustration">
           <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link" lang="ru"> Узнать &rarr;</a></p>
-          <div class="header__square-pic"></div>
+          <div class="header__square-pic rotation"></div>
         </header>
         <main class="content">
 
           <section class="description">
-            <div class="two-columns">
+            <article class="two-columns">
               <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
               <div class="two-columns__main-text"> 
                 <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
                 <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
                 <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
               </div>
-            </div>
+            </article>
           </section>
 
           <section class="techniques">
             <h2 class="section-title">Техники обучения</h2>
-            <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+            <p class="section-subtitle">Пять практик от Барбары Оакли</p>
 
-            <div class="cards">
+            <ul class="cards">
 
-              <div class="cards__item">
+              <li class="cards__item">
                 <img class="cards__image" alt="Книга в руках, крупным планом" src="./images/cards-attention.png">
                 <h4 class="cards__title">Два вида внимания</h4>
-                <p class="cards__discription">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-              </div>
+                <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+              </li>
 
-              <div class="cards__item">
+              <li class="cards__item">
                 <img class="cards__image" alt="Задумчивый монумент мужчины" src="./images/cards-recall.png">
                 <h4 class="cards__title" lang="eu">Recall</h4>
-                <p class="cards__discription">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-              </div>
+                <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+              </li>
 
-              <div class="cards__item">
+              <li class="cards__item">
                 <img class="cards__image" alt="Большая площадь, вид с подъема на лестницу" src="./images/cards-interliving.png">
                 <h4 class="cards__title">Интерливинг</h4>
-                <p class="cards__discription">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-              </div>
+                <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+              </li>
 
-              <div class="cards__item">
+              <li class="cards__item">
                 <img class="cards__image" alt="Большая белая комната, вид сверху, в центре человек" src="./images/cards-question.png">
                 <h4 class="cards__title">Вопросы</h4>
-                <p class="cards__discription">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-              </div>
+                <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+              </li>
 
-              <div class="cards__item">
+              <li class="cards__item">
                 <img class="cards__image" alt="Рукой придерживают 5 книг горизонтально" src="./images/cards-competence.png">
                 <h4 class="cards__title">Иллюзия компетентности</h4>
-                <p class="cards__discription">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-              </div>
+                <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+              </li>
 
-            </div>
+            </ul>
 
           </section>
 
           <section class="video">
             <h2 class="section-title">Видео нa TED</h2>
-            <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+            <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
             <div class="video__iframes">
-              <iframe class="video__frame" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-              <iframe class="video__frame" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+              <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+              <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
             </div>
           </section>
 
@@ -89,57 +89,68 @@
 
           <section class="feynman">
             <h2 class="feynman__title">Метод Фейнмана</h2>
-            <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+            <p class="feynman__subtitle">Выучить и не забыть.</p>
             <a href="#" class="feynman__link" lang="ru">Подробнее &rarr;</a>
             <div class="feynman__photo"></div>
           </section>
 
           <section class="digits">
             <h2 class="section-title">Цифры и факты</h2>
-            <h3 class="section-subtitle">Про учёбу и мозг</h3>
-            <div class="table">
-              <div class="table__cell">
+            <p class="section-subtitle">Про учёбу и мозг</p>
+
+            <ul class="table">
+
+              <li class="table__cell">
                 <h4 class="table__heading">86 миллиардов</h4>
                 <p class="table__text">Число нейронов в мозге человека</p>
-              </div>
-              <div class="table__cell">
+              </li>
+
+              <li class="table__cell">
                 <h4 class="table__heading">2.1 миллиарда</h4>
                 <p class="table__text">Число нуждающихся в повышении квалификации</p>
                 <p class="table__text">Всемирный Банк, 2017</p>
-              </div>
-              <div class="table__cell">
+              </li>
+
+              <li class="table__cell">
                 <h4 class="table__heading">1000 терабайт</h4>
                 <p class="table__text">Объём памяти человека</p>
-              </div>
-              <div class="table__cell">
+              </li>
+
+              <li class="table__cell">
                 <h4 class="table__heading">500 триллионов</h4>
                 <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-              </div>
-              <div class="table__cell">
+              </li>
+
+              <li class="table__cell">
                 <h4 class="table__heading">420 миллионов</h4>
                 <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
                 <p class="table__text">Всемирный Банк, 2017</p>
-              </div>
-              <div class="table__cell">
+              </li>
+
+              <li class="table__cell">
                 <h4 class="table__heading">17–20 лет</h4>
                 <p class="table__text">Пик обучаемости</p>
-              </div>
-              <div class="table__cell">
+              </li>
+
+              <li class="table__cell">
                 <h4 class="table__heading">1885 год</h4>
                 <p class="table__text">Открытие кривой забывания</p>
-              </div>
-              <div class="table__cell">
+              </li>
+
+              <li class="table__cell">
                 <h4 class="table__heading">1889 год</h4>
                 <p class="table__text">Открытие условного рефлекса</p>
-              </div>
-            </div>
+              </li>
+
+            </ul>
+
           </section>
 
           <section class="khan">
             <div class="khan__container">
               <p class="khan__author">Салман Хан</p>
               <h2 class="khan__title">Весь мир — школа</h2>
-              <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+              <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
               <p class="khan__quote-author">Джордж Лукас</p>
               <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
               <div class="khan__book-container">
@@ -152,60 +163,81 @@
           <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-          <div class="table table_theme_dark">
-            <div class="table__cell table__cell_theme_dark">
+
+          <ul class="table table_theme_dark">
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">1</h4>
               <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+            </li>
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">2</h4>
               <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+            </li>
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">3</h4>
               <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+            </li>
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">4</h4>
               <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+            </li>
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">5</h4>
               <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+            </li>
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">6</h4>
               <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+            </li>
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">7</h4>
               <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+            </li>
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">8</h4>
               <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+            </li>
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">9</h4>
               <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+            </li>
+
+            <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">10</h4>
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-            </div>
-          </div>
-          <div class="kaufman__triangle"></div>
+            </li>
+
+          </ul>
+
+          <div class="kaufman__triangle rotation"></div>
           </section>
           
           <section class="resources">
             <h2 class="section-title">Полезные ресурсы</h2>
-            <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
-            <div class="resources__logo-zone">
-              <a href="https://arzamas.academy/" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип сайта Arzamas"></a>
-              <a href="https://nplus1.ru/" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип сайта N+1"></a>
-              <a href="https://www.strelka.com/ru" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип сайта STRELKA"></a>
-              <a href="https://polka.academy/" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип сайта ПОЛКА"></a>
-            </div>
+            <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+            <ul class="resources__logo-zone">
+              <li>
+                <a href="https://arzamas.academy/" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип сайта Arzamas"></a>
+              </li>
+              <li>
+                <a href="https://nplus1.ru/" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип сайта N+1"></a>
+              </li>
+              <li>
+                <a href="https://www.strelka.com/ru" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип сайта STRELKA"></a>
+              </li>
+              <li>
+                <a href="https://polka.academy/" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип сайта ПОЛКА"></a>
+              </li>
+            </ul>
           </section>
 
         </main>
@@ -213,22 +245,24 @@
           <div class="footer__columns">
             <div class="footer__column footer__column_content_copyright">
               <a href="https://practicum.yandex.ru/" class="footer__link" target="_blank"><img alt="здесь должен быть логотип Яндекс Практикума, но что-то пошло не так.." src="./images/logo/logo_white.svg" class="logo logo_place_footer"></a>
-              <p class="footer__authhor">&#169; 2022. Никита Савицкий</p>
+              <p class="footer__author">&#169; 2022. Никита Савицкий</p>
             </div>
             <div class="footer__column footer__column_content_info">
               <h3 class="footer__column-heading">О Практикуме</h3>
+
               <nav class="footer__menu">
-                <ul class="footer__mark">
-                  <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Главная</a></li>
-                  <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Концепция</a></li>
-                  <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Наставники</a></li>
+                <ul class="footer__mark footer__column-links">
+                  <li class="footer__column-link"><a href="#" class="footer__link" lang="ru">Главная</a></li>
+                  <li class="footer__column-link"><a href="#" class="footer__link" lang="ru">Концепция</a></li>
+                  <li class="footer__column-link"><a href="#" class="footer__link" lang="ru">Наставники</a></li>
                 </ul>
               </nav>
+
             </div>
             <div class="footer__column footer__column_content_social">
               <h3 class="footer__column-heading">Соцсети</h3>
               <nav class="footer__menu">
-                <ul class="footer__mark">
+                <ul class="footer__mark footer__column-links">
                   <li class="footer__column-link"><a href="https://www.facebook.com/yandex.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Facebook" src="./images/logo/facebook_white.svg" class="footer__social-icon">Facebook</a></li>
                   <li class="footer__column-link"><a href="https://vk.com/yandex.practicum" class="footer__link" lang="ru" target="_blank"><img alt="иконка Вконтакте" src="./images/logo/vk_white.svg" class="footer__social-icon">ВКонтакте</a></li>
                   <li class="footer__column-link"><a href="https://www.instagram.com/yndx.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Instagram" src="./images/logo/instagram_white.svg" class="footer__social-icon">Instagram</a></li>
