2 итерация. 2-ой спринт. (Исправление файловой структуры, правописания, создание отдельного классса для анимации rotation)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
           <div class="header__square-pic rotation"></div>
         </header>
         <main class="content">
-
           <section class="description">
             <article class="two-columns">
               <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -28,47 +27,37 @@
               </div>
             </article>
           </section>
-
           <section class="techniques">
             <h2 class="section-title">Техники обучения</h2>
             <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-
             <ul class="cards">
-
               <li class="cards__item">
                 <img class="cards__image" alt="Книга в руках, крупным планом" src="./images/cards-attention.png">
                 <h4 class="cards__title">Два вида внимания</h4>
                 <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
               </li>
-
               <li class="cards__item">
                 <img class="cards__image" alt="Задумчивый монумент мужчины" src="./images/cards-recall.png">
                 <h4 class="cards__title" lang="eu">Recall</h4>
                 <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
               </li>
-
               <li class="cards__item">
                 <img class="cards__image" alt="Большая площадь, вид с подъема на лестницу" src="./images/cards-interliving.png">
                 <h4 class="cards__title">Интерливинг</h4>
                 <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
               </li>
-
               <li class="cards__item">
                 <img class="cards__image" alt="Большая белая комната, вид сверху, в центре человек" src="./images/cards-question.png">
                 <h4 class="cards__title">Вопросы</h4>
                 <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
               </li>
-
               <li class="cards__item">
                 <img class="cards__image" alt="Рукой придерживают 5 книг горизонтально" src="./images/cards-competence.png">
                 <h4 class="cards__title">Иллюзия компетентности</h4>
                 <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
               </li>
-
             </ul>
-
           </section>
-
           <section class="video">
             <h2 class="section-title">Видео нa TED</h2>
             <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
@@ -77,75 +66,60 @@
               <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
             </div>
           </section>
-
           <section class="oakley">
-            <div class="two-columns">
+            <article class="two-columns">
               <h2 class="two-columns__brief">История Барбары Оакли.</h2>
               <div class="two-columns__main-text"> 
                 <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
               </div>
-            </div>
+            </article>
           </section>
-
           <section class="feynman">
             <h2 class="feynman__title">Метод Фейнмана</h2>
             <p class="feynman__subtitle">Выучить и не забыть.</p>
-            <a href="#" class="feynman__link" lang="ru">Подробнее &rarr;</a>
+            <a href="https://habr.com/ru/company/getmeit/blog/646085/" class="feynman__link" lang="ru" target="_blank">Подробнее &rarr;</a>
             <div class="feynman__photo"></div>
           </section>
-
           <section class="digits">
             <h2 class="section-title">Цифры и факты</h2>
             <p class="section-subtitle">Про учёбу и мозг</p>
-
             <ul class="table">
-
               <li class="table__cell">
                 <h4 class="table__heading">86 миллиардов</h4>
                 <p class="table__text">Число нейронов в мозге человека</p>
               </li>
-
               <li class="table__cell">
                 <h4 class="table__heading">2.1 миллиарда</h4>
                 <p class="table__text">Число нуждающихся в повышении квалификации</p>
                 <p class="table__text">Всемирный Банк, 2017</p>
               </li>
-
               <li class="table__cell">
                 <h4 class="table__heading">1000 терабайт</h4>
                 <p class="table__text">Объём памяти человека</p>
               </li>
-
               <li class="table__cell">
                 <h4 class="table__heading">500 триллионов</h4>
                 <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
               </li>
-
               <li class="table__cell">
                 <h4 class="table__heading">420 миллионов</h4>
                 <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
                 <p class="table__text">Всемирный Банк, 2017</p>
               </li>
-
               <li class="table__cell">
                 <h4 class="table__heading">17–20 лет</h4>
                 <p class="table__text">Пик обучаемости</p>
               </li>
-
               <li class="table__cell">
                 <h4 class="table__heading">1885 год</h4>
                 <p class="table__text">Открытие кривой забывания</p>
               </li>
-
               <li class="table__cell">
                 <h4 class="table__heading">1889 год</h4>
                 <p class="table__text">Открытие условного рефлекса</p>
               </li>
-
             </ul>
-
           </section>
-
           <section class="khan">
             <div class="khan__container">
               <p class="khan__author">Салман Хан</p>
@@ -155,72 +129,57 @@
               <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
               <div class="khan__book-container">
                 <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга. Весь мир - школа, Салман Хан">
-                <a class="khan__buy-link" href="#" lang="ru"> Купить книгу &rarr;</a>
+                <a class="khan__buy-link" href="https://www.ozon.ru/product/ves-mir-shkola-preobrazovannoe-obrazovanie-162999126/?sh=x_0wFXxFBQ" lang="ru" target="_blank"> Купить книгу &rarr;</a>
               </div>
             </div>
           </section>
-
           <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-
           <ul class="table table_theme_dark">
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">1</h4>
               <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </li>
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">2</h4>
               <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </li>
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">3</h4>
               <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </li>
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">4</h4>
               <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </li>
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">5</h4>
               <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </li>
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">6</h4>
               <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
             </li>
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">7</h4>
               <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </li>
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">8</h4>
               <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
             </li>
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">9</h4>
               <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </li>
-
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">10</h4>
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
-
           </ul>
-
           <div class="kaufman__triangle rotation"></div>
-          </section>
-          
+          </section>         
           <section class="resources">
             <h2 class="section-title">Полезные ресурсы</h2>
             <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
@@ -239,7 +198,6 @@
               </li>
             </ul>
           </section>
-
         </main>
         <footer class="footer">
           <div class="footer__columns">
@@ -249,7 +207,6 @@
             </div>
             <div class="footer__column footer__column_content_info">
               <h3 class="footer__column-heading">О Практикуме</h3>
-
               <nav class="footer__menu">
                 <ul class="footer__mark footer__column-links">
                   <li class="footer__column-link"><a href="#" class="footer__link" lang="ru">Главная</a></li>
@@ -257,7 +214,6 @@
                   <li class="footer__column-link"><a href="#" class="footer__link" lang="ru">Наставники</a></li>
                 </ul>
               </nav>
-
             </div>
             <div class="footer__column footer__column_content_social">
               <h3 class="footer__column-heading">Соцсети</h3>
