--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./page/index.css"> 
+    <link rel="stylesheet" href="./pages/index.css"> 
     <title>Научиться учиться</title>
 </head>
 <body>
@@ -208,7 +208,7 @@
             <div class="footer__column footer__column_content_info">
               <h3 class="footer__column-heading">О Практикуме</h3>
               <nav class="footer__menu">
-                <ul class="footer__mark footer__column-links">
+                <ul class="footer__column-links">
                   <li class="footer__column-link"><a href="#" class="footer__link" lang="ru">Главная</a></li>
                   <li class="footer__column-link"><a href="#" class="footer__link" lang="ru">Концепция</a></li>
                   <li class="footer__column-link"><a href="#" class="footer__link" lang="ru">Наставники</a></li>
@@ -218,7 +218,7 @@
             <div class="footer__column footer__column_content_social">
               <h3 class="footer__column-heading">Соцсети</h3>
               <nav class="footer__menu">
-                <ul class="footer__mark footer__column-links">
+                <ul class="footer__column-links">
                   <li class="footer__column-link"><a href="https://www.facebook.com/yandex.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Facebook" src="./images/logo/facebook_white.svg" class="footer__social-icon">Facebook</a></li>
                   <li class="footer__column-link"><a href="https://vk.com/yandex.practicum" class="footer__link" lang="ru" target="_blank"><img alt="иконка Вконтакте" src="./images/logo/vk_white.svg" class="footer__social-icon">ВКонтакте</a></li>
                   <li class="footer__column-link"><a href="https://www.instagram.com/yndx.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Instagram" src="./images/logo/instagram_white.svg" class="footer__social-icon">Instagram</a></li>
